fix: fixed loading wheel appearance on mobile display

--- a/src/components/reusables/LoadingComponent/loading.css
+++ b/src/components/reusables/LoadingComponent/loading.css
@@ -1,7 +1,7 @@
 .loading-container {
   display: grid;
   place-items: center;
-  padding: 10rem;
+  padding-top: 10rem;
 }
 
 .loading {
